# cypstrate

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.dev  README.md  environment.yml  nerdd.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: build-container.yml  release.yml  test.yml
cypstrate/: cypstrate_model.py  version.py
cypstrate/data/: nerdd.yml
cypstrate/maccs_fps/: maccs_fps_trainset_1A2.npy  maccs_fps_trainset_2A6.npy  maccs_fps_trainset_2B6.npy  maccs_fps_trainset_2C19.npy  maccs_fps_trainset_2C8.npy  maccs_fps_trainset_2C9.npy  maccs_fps_trainset_2D6.npy  maccs_fps_trainset_2E1.npy  maccs_fps_trainset_3A4.npy
cypstrate/models/: __init__.py
cypstrate/models/full_coverage/: model_2A6_RF_rdkit.joblib  model_2C9_SVM_mol2vec.joblib  model_2D6_SVM_rdkit.joblib  model_2E1_SVM_morg2.joblib  model_3A4_SVM_rdkit.joblib
cypstrate/preprocessing/: __init__.py  canonicalize_tautomer.py  cypstrate_preprocessing_pipeline.py  remove_light_molecules.py
tests/: steps.py
tests/features/: consistent_predictions.feature  valid_predictions.feature
