[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cypstrate"
version = "0.0.8"
description = "CYPstrate: Prediction of Cytochrome P450 substrates"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9,<3.10"
authors = [
    { name = "Malte Holmer" },
    { name = "Axinya Tokareva" },
    { name = "Steffen Hirte", email = "steffen.hirte@univie.ac.at" },
]
maintainers = [
    { name = "Johannes Kirchmair", email = "johannes.kirchmair@univie.ac.at" },
]
dependencies = [
    "rdkit==2020.09.1",
    "scikit-learn==0.23.2",
    "gensim==3.8.3",
    "numpy==1.20.3",
    "mol2vec==0.2.2",
    "nerdd-module>=0.3.34",
    "chembl_structure_pipeline==1.0.0",
    "importlib-resources>=5; python_version<'3.9'",
    "importlib-metadata>=4.6; python_version<'3.10'",
]

[project.optional-dependencies]
dev = ["mypy", "ruff"]
test = [
    "pytest",
    "pytest-watcher",
    "pytest-cov",
    "pytest-bdd==7.3.0",
    "hypothesis",
    "hypothesis-rdkit",
]

[project.urls]
Repository = "https://github.com/molinfo-vienna/cypstrate"

[project.scripts]
cypstrate = "cypstrate.__main__:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
addopts = "-x --cov-report term --cov=cypstrate"

[tool.pytest-watcher]
patterns = ["*.py", "*.feature", "pyproject.toml"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
upload_to_vcs_release = true
